// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationsColumnConfiguration component should render column "category": category 1`] = `
<DocumentFragment>
  Cellular component
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "content": content 1`] = `
<DocumentFragment>
  Endoplasmic reticulum-Golgi intermediate compartment membrane
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "definition": definition 1`] = `
<DocumentFragment>
  The membrane surrounding the ER-Golgi intermediate compartment, which is a collection of tubulovesicular membrane clusters in the vicinity of ER exit sites.
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "gene_ontologies": gene_ontologies 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      endoplasmic reticulum-Golgi intermediate compartment membrane (GO:0033116)
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <div
    class="accession-view"
  >
    <a
      href="/locations/SL-0099"
    >
      SL-0099
    </a>
  </div>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "is_a": is_a 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/locations/SL-0162"
      >
        Membrane
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "keyword": keyword 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "links": links 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  />
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Endoplasmic reticulum-Golgi intermediate compartment membrane
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "note": note 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "part_of": part_of 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/locations/SL-0098"
      >
        Endoplasmic reticulum-Golgi intermediate compartment
      </a>
    </li>
    <li>
      <a
        href="/locations/SL-0147"
      >
        Endomembrane system
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "references": references 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  />
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "synonyms": synonyms 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      ERGIC membrane
    </li>
    <li>
      ER-Golgi intermediate compartment membrane
    </li>
    <li>
      IC membrane
    </li>
    <li>
      Intermediate compartment membrane
    </li>
    <li>
      Vesiculo-tubular cluster membrane
    </li>
    <li>
      VTC membrane
    </li>
  </ul>
</DocumentFragment>
`;
